--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Резюме</h1>
     </header>
     <div class="index">
-        <img src="img/it's_me.jpg" alt="Здесь должна была быть фотка, но увы">
+        <img src="it's_me.jpg" alt="Здесь должна была быть фотка, но увы">
         <samp>
             <h2>Евгений Константинович Соломин</h2>
             <p>Дата рождения: 4 июня 2000г.</p>
